[package]
name         = "key"
version      = "3.0.0" # breaking: removed --salt / --gen-salt flags
edition      = "2021"
rust-version = "1.78"
authors      = ["You <you@example.com>"]
description  = "Deterministic high-strength key material generator (two-password mode; no base64 salt)"
license      = "MIT OR Apache-2.0"
repository   = ""
homepage     = ""

[dependencies]
# CLI
clap       = { version = "4.5", features = ["derive"] }

# Crypto + helpers
argon2       = { version = "0.5", default-features = false }
blake3       = "1.5"
rand         = { version = "0.8", default-features = false, features = ["std"] }  # only for traits
rand_chacha  = { version = "0.3", default-features = false }
rpassword    = "7"
subtle       = "2.5"
zeroize      = "1"

# Windows-only (tighten ACLs)
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "winnt",
  "aclapi",
  "accctrl",
  "securitybaseapi",
  "handleapi",
  "errhandlingapi",
  "winbase"
] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = "s"
