[package]
name = "tfish-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = "0.5"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
hmac = "0.12"
rpassword = "7"
rand = "0.8"
skein = "0.1.1"
threefish = "0.5.2"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
sha2 = "0.10"
tempfile = "3"
